cargo_check_errors.txt
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
   Compiling version_check v0.9.5
   Compiling typenum v1.18.0
    Checking cfg-if v1.0.1
   Compiling shlex v1.3.0
    Checking memchr v2.7.5
   Compiling serde v1.0.219
   Compiling semver v1.0.26
   Compiling anyhow v1.0.98
   Compiling autocfg v1.5.0
   Compiling pkg-config v0.3.32
   Compiling regex-lite v0.1.6
   Compiling lazy_static v1.5.0
    Checking once_cell v1.21.3
   Compiling zerocopy v0.8.26
    Checking regex-syntax v0.8.5
    Checking hashbrown v0.15.4
    Checking equivalent v1.0.2
    Checking subtle v2.6.1
    Checking utf8parse v0.2.2
    Checking colorchoice v1.0.4
    Checking smallvec v1.15.1
    Checking anstyle-query v1.1.3
   Compiling thiserror v1.0.69
   Compiling parking_lot_core v0.9.11
    Checking is_terminal_polyfill v1.70.1
    Checking regex-syntax v0.6.29
   Compiling object v0.36.7
   Compiling zstd-safe v7.2.4
    Checking anstyle v1.0.11
    Checking log v0.4.27
    Checking scopeguard v1.2.0
    Checking clap_lex v0.7.5
   Compiling serde_json v1.0.140
    Checking strsim v0.11.1
    Checking winnow v0.7.11
    Checking anstyle-parse v0.2.7
    Checking option-ext v0.2.0
   Compiling heck v0.5.0
    Checking itoa v1.0.15
    Checking tracing-core v0.1.34
    Checking adler2 v2.0.1
    Checking pin-project-lite v0.2.16
   Compiling inkwell v0.4.0
    Checking gimli v0.31.1
    Checking toml_write v0.1.2
    Checking anstream v0.6.19
    Checking overload v0.1.1
    Checking ryu v1.0.20
    Checking miniz_oxide v0.8.9
    Checking sharded-slab v0.1.7
    Checking nu-ansi-term v0.46.0
   Compiling generic-array v0.14.7
    Checking thread_local v1.1.9
    Checking bitflags v2.9.1
    Checking cpufeatures v0.2.17
    Checking humantime v2.2.0
    Checking rustc-demangle v0.1.25
    Checking termcolor v1.4.1
    Checking either v1.15.0
    Checking same-file v1.0.6
    Checking clap_builder v4.5.40
    Checking aho-corasick v1.1.3
    Checking keccak v0.1.5
    Checking unsafe-libyaml v0.2.11
   Compiling lock_api v0.4.13
   Compiling num-traits v0.2.19
error[E0432]: unresolved import `crate::error`
 --> /home/ghuntley/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/either-1.15.0/src/into_either.rs:5:12
  |
5 | use crate::error::Error;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `core::error`

    Checking libloading v0.8.8
    Checking walkdir v2.5.0
    Checking glob v0.3.2
    Checking httpdate v1.0.3
    Checking base64 v0.21.7
    Checking tracing-log v0.2.0
    Checking urlencoding v2.1.3
    Checking indexmap v2.9.0
    Checking hex v0.4.3
For more information about this error, try `rustc --explain E0432`.
error: could not compile `either` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
